test: made tests for authentication system and for generating schema also made some changes to documentation
